--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav role="navigation">
-        <a href="">Home</a>
+        <a href="">Logout</a>
         
     </nav>
     <main role="main">
