--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                     <input type="number" name='mileage' id='mileage' required />
                 </div>
                 <div>
+                    <label for="vin">VIN number</label>
+                    <input type="text" name='vin' id='vin' required />
+                </div>
+                <div>
                     <label for="location">Parking space</label>
                     <input type="text" name='location' id='location' required />
                 </div>
